Refactor components to remove unnecessary React imports and improve type definitions; update TypeScript configuration for JSX support

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -11,16 +11,23 @@
     "units": {
         "g_ml": "g/ml",
         "kg": "kg",
-        "gr": "gr"
+        "gr": "gr",
+        "su": "s.u.",
+        "ml": "ml",
+        "l": "l",
+        "minutes": "minutes",
+        "percentage": "%"
     },
     "login": {
         "login": "Login",
+        "logo": "Logo",
         "email": "Email",
         "password": "Password",
         "dont_have_account": "Don't have an account? Signup"
     },
     "signup": {
         "signup": "Signup",
+        "logo": "Logo",
         "email": "Email",
         "password": "Password",
         "repeat_password": "Repeat Password",
@@ -81,26 +88,54 @@
         "submit": "Submit"
     },
     "order_execution": {
+        "machine_setting_kg": "Machine Setting, kg",
         "target_consumption_kg": "Target consumption, kg",
         "actual_consumption_kg": "Actual consumption, kg",
         "recipe_execution_photos": "Recipe Execution Photos",
         "expected_seeds_to_pack": "Expected Seeds To Pack",
+        "finished_treating_lot": "You finished treating lot {{lotNumber}}.",
+        "check_further_tasks": "Please check your further tasks for today or contact your Manager.",
+        "enter_value": "Enter value",
+        "internet_connection_required": "Internet Connection Required",
+        "internet_connection_required_message": "You may complete execution only when internet access is available. Please find better internet connection.",
+        "close": "Close",
+        "ok": "OK",
+        "thank_you": "Thank you!",
         "packing_photo": "Packing Photo",
+        "Next": "Next",
+        "per_seeds": "per seeds",
+        "make_consumption_photo_proof": "Make a consumption photo proof.",
+        "obliged_to_make_photo": "You are obliged to make a photo of scales display on the next page!",
+        "of": "of",
         "consumption_info": "Consumption Info",
+        "total_slurry_consumption": "Total Slurry Consumption {{kg}} kg",
         "consumption_photo": "Consumption Photo",
         "no_photo": "No Photo",
         "product_execution_details": "Product Execution Details",
         "product_name": "Product Name",
         "expected_application": "Expected Application",
         "application_photo": "Application Photo",
+        "how_many_seeds_kg": "How many seeds in kg, did you pack?",
+        "obliged_to_make_photo_treater_display": "You are obliged to make a photo of treater display showing this result on the next page!",
+        "obliged_to_make_photo_display": "You are obliged to make a photo of the display showing the amount of the treated seeds.",
+        "kg_is_missing": "{{kg}} kg is missing!",
+        "corresponds_to_weight": "This corresponds to the weight of the lot.",
+        "inform_line_manager": "Please inform your line manager if you cannot find it!",
         "expected_consumption": "Expected Consumption",
+        "target_rate": "Target Rate",
         "undefined": "undefined",
         "currently_treating_lot": "You are currently treating lot",
         "confirm_when_finish": "Please confirm when you finish the lot",
         "confirm_finished_treating": "I hereby confirm that I finished to treat lot",
         "ready_to_give_units_packed": "and ready to give the number of units packed.",
         "next": "Next",
+        "actual_rate": "Actual Rate",
+        "preparation": "Preparation",
+        "target_rate_kg": "Target Rate, kg",
+        "make_photo": "Make Photo",
+        "lot_kg": "Lot, kg",
         "all_products_added": "You added all products.",
+        "invalid_data_order_not_found": "Invalid data, order not found.",
         "target_qty_kg": "Target Qty, kg",
         "actual_qty_kg": "Actual Qty, kg",
         "total": "Total",
@@ -150,6 +185,10 @@
         "cancel": "Cancel"
     },
     "orders_overview": {
+        "crop": "Crop",
+        "lot": "Lot",
+        "products": "Products",
+        "close": "Close",
         "no_internet_access": "No access to internet available.",
         "refresh": "Refresh",
         "lots_to_treat_today": "You have the following lots to treat today, {{date}}",
@@ -278,7 +317,9 @@
         "try_again": "Try Again"
     },
     "use_image_modal": {
-        "click_to_view_full_size": "Click to view full size"
+        "click_to_view_full_size": "Click to view full size",
+        "full_size": "Full Size",
+        "thumbnail": "Thumbnail"
     },
     "use_role_links": {
         "board": "Board",
@@ -292,6 +333,15 @@
         "lab": "Lab"
     },
     "finalize_recipe": {
+        "finalize_recipe": "Finalize Recipe",
+        "units": "Units",
+        "slurry_density": "Slurry Density",
+        "select_product": "Select Product",
+        "slurry_per_lot": "Slurry per Lot",
+        "slurry_per_100kg": "Slurry per 100kg",
+        "any_operator": "Any Operator",
+        "in_seeds": "In Seeds",
+        "in_kg": "In Kg",
         "application_date": "Application date",
         "operator": "Operator",
         "crop": "Crop",
@@ -328,7 +378,20 @@
         "at_least_one_product": "At least one product is required"
     },
     "new_receipe": {
+        "recipe_created_for_processing": "Recipe successfully created for processing at",
+        "view_recipe_in_board": "You can view this Recipe in the Board, by clicking on your Receipe and opening Recipe Tab.",
+        "in_seeds": "In Seeds",
+        "in_kg": "In Kg",
+        "units": "Units",
+        "select_product": "Select Product",
+        "slurry_per_100kg": "Slurry per 100kg",
+        "any_operator": "Any Operator",
+        "slurry_per_lot": "Slurry per Lot",
+        "slurry_density": "Slurry Density",
+        "select_crop_first": "Select Crop First",
+        "select_crop": "Select Crop",
         "new_receipe": "New Receipe",
+        "select_variety": "Select Variety",
         "application_date": "Application date",
         "operator": "Operator",
         "crop": "Crop",
@@ -373,7 +436,10 @@
     },
     "new_assignment": {
         "new_assignment": "New Assignment",
+        "select_crop_first": "Select Crop First",
         "crop": "Crop",
+        "select_crop": "Select Crop",
+        "select_variety": "Select Variety",
         "variety": "Variety",
         "lot_number": "Lot Number",
         "seeds_to_treat": "Seeds To Treat (kg)",
@@ -452,10 +518,12 @@
         "add_completion_comment": "Add Completion Comment",
         "enter_comment": "Enter your comment here...",
         "submit": "Submit",
-        "error_product_data_not_found": "Error - Product data is not found, please contact support."
+        "error_product_data_not_found": "Error - Product data is not found, please contact support.",
+        "actual_rate_gr_100kg_seeds": "Actual rate gr / 100 kg seeds"
     },
     "report": {
         "report": "Report",
+        "total": "Total",
         "crop": "Crop",
         "all_crops": "All Crops",
         "variety": "Variety",
@@ -467,7 +535,29 @@
         "to_date": "To Date",
         "generate_report": "Generate Report",
         "download_report": "Download Report",
-        "no_data": "No Data Available"
+        "no_data": "No Data Available",
+        "treatment_overview": "Treatment Overview",
+        "disapproved_by_manager": "Disapproved by Manager",
+        "to_be_acknowledged": "To be acknowledged",
+        "approved_by_manager": "Approved by Manager",
+        "category": "Category",
+        "number_of_lots": "Number of Lots",
+        "summary": "Summary",
+        "treatment_date": "Treatment Date",
+        "operator": "Operator",
+        "lot_size_su": "Lot Size, s.u.",
+        "lot_size_kg": "Lot Size, kg",
+        "status": "Status",
+        "seed_processing_report": "Seed Processing Report",
+        "all_statuses": "All Statuses",
+        "all_operators": "All Operators",
+        "end_date": "End Date",
+        "start_date": "Start Date",
+        "in_progress": "In Progress",
+        "disapproved": "Disapproved",
+        "to_acknowledge": "To Acknowledge",
+        "approved": "Approved",
+        "orders": "Orders"
     },
     "card": {
         "success": "Success",
