Add language selection feature and update localization; refactor Board and Info components

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -296,7 +296,8 @@
         "assignment_date": "Assignment Date"
     },
     "info": {
-        "app_version": "App Version"
+        "app_version": "App Version",
+        "language": "Language"
     },
     "index": {
         "measurements_check": "You have measurements to check",
