Add localization for TKW measurement percentage variations and update LotReport component

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -485,6 +485,10 @@
     },
     "lot_report": {
         "tkw_measurements": "TKW Measurements",
+        "plus_5_percent": "+5%",
+        "minus_5_percent": "-5%",
+        "plus_10_percent": "+10%",
+        "minus_10_percent": "-10%",
         "date": "Date",
         "tkw_value": "TKW Value",
         "90_105": "😊 90-105%",
