Rename tkw_details_modal to tkw_details_page and add back navigation; update routing to include TkwDetailsPage component

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -240,7 +240,8 @@
         "treatment_started_at": "Treatment Started At",
         "measurement_assigned_at": "Measurement Assigned At"
     },
-    "tkw_details_modal": {
+    "tkw_details_page": {
+        "back": "Back",
         "tkw_details": "TKW Details",
         "lot": "Lot",
         "seeds_to_treat": "Seeds To Treat",
