--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -240,7 +240,8 @@
         "treatment_started_at": "Traitement commencé à",
         "measurement_assigned_at": "Mesure assignée à"
     },
-    "tkw_details_modal": {
+    "tkw_details_page": {
+        "back": "Retour",
         "tkw_details": "Détails du TKW",
         "lot": "Lot",
         "seeds_to_treat": "Graines à traiter",
