--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -245,13 +245,15 @@
         "lot": "Lot",
         "seeds_to_treat": "Seeds To Treat",
         "operator": "Operator",
-        "probe_1": "Probe 1",
-        "probe_2": "Probe 2",
-        "probe_3": "Probe 3",
+        "probe_1": "Repetition 1",
+        "probe_2": "Repetition 2",
+        "probe_3": "Repetition 3",
         "average": "Av.",
+        "assignment_creation_date": "Lab Assignment Creation Date",
+        "raw_measurement_date": "Raw TKW Measurement Date",
         "creation_date": "Creation Date",
-        "completion_date": "Completion Date",
         "measurement_date": "Measurement Date",
+        "completion_date": "Treatment Completion Date",
         "treated_tkw_measurements": "Treated TKW Measurements",
         "close": "Close"
     },
@@ -299,9 +301,11 @@
         "app_version": "App Version",
         "language": "Language"
     },
+    "alerts": {
+        "measurements_check": "New assignment added for TKW measurements",
+        "tasks_to_do": "New lot added for treatment"
+    },
     "index": {
-        "measurements_check": "You have measurements to check",
-        "tasks_to_do": "You have tasks to do",
         "rendering_app": "Rendering App",
         "rendering_root": "Rendering root",
         "service_worker_registered": "Service Worker registered with scope:",
