--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -245,10 +245,12 @@
         "lot": "Lot",
         "seeds_to_treat": "Graines à traiter",
         "operator": "Opérateur",
-        "probe_1": "Sonde 1",
-        "probe_2": "Sonde 2",
-        "probe_3": "Sonde 3",
+        "probe_1": "Repetition 1",
+        "probe_2": "Repetition 2",
+        "probe_3": "Repetition 3",
         "average": "Moyenne",
+        "assignment_creation_date": "Date de création de l'affectation de laboratoire",
+        "raw_measurement_date": "Date de mesure du TKW brut",
         "creation_date": "Date de création",
         "completion_date": "Date de fin",
         "measurement_date": "Date de mesure",
@@ -299,9 +301,11 @@
         "app_version": "Version de l'application",
         "language": "Langue"
     },
+    "alerts": {
+        "measurements_check": "New assignment added for TKW measurements",
+        "tasks_to_do": "New lot added for treatment"
+    },
     "index": {
-        "measurements_check": "Vous avez des mesures à vérifier",
-        "tasks_to_do": "Vous avez des tâches à faire",
         "rendering_app": "Rendu de l'application",
         "rendering_root": "Rendu de la racine",
         "service_worker_registered": "Service Worker enregistré avec le périmètre :",
