Refactor notification handling in DataSynchronizer; update alert message display and improve localization strings for clarity

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -588,9 +588,9 @@
         "for": "for",
         "lot": "Lot",
         "to_treat": "To Treat",
-        "assigned_at": "Assigned At",
-        "created_at": "Created At",
-        "expected_start_at": "Expected Start At",
+        "assigned_at": "Lab Assigned At",
+        "created_at": "Recipe Created At",
+        "expected_start_at": "Expected To Be Started At",
         "raw_tkw_measured_at": "Raw TKW Measured At",
         "preparation_started_at": "Preparation Started At",
         "treatment_started_at": "Treatment Started At",
