--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -355,6 +355,7 @@
         "select_product": "Sélectionner le produit",
         "slurry_per_lot": "Slurry par lot",
         "slurry_per_100kg": "Slurry par 100kg",
+        "tkw_more_than_zero": "Le TKW doit être supérieur à 0",
         "any_operator": "N'importe quel opérateur",
         "in_seeds": "En graines",
         "in_kg": "En kg",
@@ -588,9 +589,9 @@
         "for": "pour",
         "lot": "Lot",
         "to_treat": "À traiter",
-        "assigned_at": "Assigné à",
-        "created_at": "Créé à",
-        "expected_start_at": "Début prévu à",
+        "assigned_at": "Attribué au laboratoire à",
+        "created_at": "Recette créée à",
+        "expected_start_at": "Date de début prévue",
         "raw_tkw_measured_at": "TKW brut mesuré à",
         "preparation_started_at": "Préparation commencée à",
         "treatment_started_at": "Traitement commencé à",
