Refactor DataSynchronizer and Card components; clean up unused imports and improve localization strings in English and French

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -356,7 +356,7 @@
         "slurry_per_lot": "Slurry per Lot",
         "slurry_per_100kg": "Slurry per 100kg",
         "any_operator": "Any Operator",
-        "in_seeds": "In Seeds",
+        "in_seeds": "In S.U.",
         "in_kg": "In Kg",
         "application_date": "Application date",
         "operator": "Operator",
@@ -377,7 +377,7 @@
         "save": "Save",
         "form_errors": "Form Errors",
         "recipe_created": "Recipe Created",
-        "recipe_created_message": "Recipe successfully created for processing at",
+        "recipe_created_message": "Recipe successfully created for processing on {{date}}",
         "view_in_board": "You can view this Recipe in the Board.",
         "do_not_show_again": "Do not show this message again.",
         "close": "Close",
@@ -394,7 +394,7 @@
         "at_least_one_product": "At least one product is required"
     },
     "new_receipe": {
-        "recipe_created_for_processing": "Recipe successfully created for processing at",
+        "recipe_created_for_processing": "Recipe successfully created for processing on {{date}}",
         "view_recipe_in_board": "You can view this Recipe in the Board, by clicking on your Receipe and opening Recipe Tab.",
         "in_seeds": "In Seeds",
         "in_kg": "In Kg",
@@ -426,7 +426,7 @@
         "done": "Done",
         "form_errors": "Form Errors",
         "recipe_created": "Receipe Created",
-        "recipe_created_message": "Recipe successfully created for processing on",
+        "recipe_created_message": "Recipe successfully created for processing on {{date}}",
         "view_in_board": "You can view this Recipe in the Board, by clicking on your Receipe and opening Recipe Tab.",
         "do_not_show_again": "Do not show this message again.",
         "close": "Close",
@@ -585,7 +585,8 @@
     "card": {
         "success": "Success",
         "failed": "Failed",
-        "for": "for",
+        "for": "For",
+        "operator": "Operator",
         "lot": "Lot",
         "to_treat": "To Treat",
         "assigned_at": "Lab Assigned At",
