--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -357,7 +357,7 @@
         "slurry_per_100kg": "Slurry par 100kg",
         "tkw_more_than_zero": "Le TKW doit être supérieur à 0",
         "any_operator": "N'importe quel opérateur",
-        "in_seeds": "En graines",
+        "in_seeds": "En S.U.",
         "in_kg": "En kg",
         "application_date": "Date d'application",
         "operator": "Opérateur",
@@ -378,7 +378,7 @@
         "save": "Enregistrer",
         "form_errors": "Erreurs de formulaire",
         "recipe_created": "Recette créée",
-        "recipe_created_message": "Recette créée avec succès pour le traitement à",
+        "recipe_created_message": "Recette créée avec succès pour le traitement à {{date}}",
         "view_in_board": "Vous pouvez voir cette recette dans le tableau.",
         "do_not_show_again": "Ne plus afficher ce message.",
         "close": "Fermer",
@@ -395,7 +395,7 @@
         "at_least_one_product": "Au moins un produit est requis"
     },
     "new_receipe": {
-        "recipe_created_for_processing": "Recette créée avec succès pour le traitement à",
+        "recipe_created_for_processing": "Recette créée avec succès pour le traitement à {{date}}",
         "view_recipe_in_board": "Vous pouvez voir cette recette dans le tableau, en cliquant sur votre recette et en ouvrant l'onglet Recette.",
         "in_seeds": "En graines",
         "in_kg": "En kg",
@@ -427,7 +427,7 @@
         "done": "Terminé",
         "form_errors": "Erreurs de formulaire",
         "recipe_created": "Recette créée",
-        "recipe_created_message": "Recette créée avec succès pour le traitement le",
+        "recipe_created_message": "Recette créée avec succès pour le traitement le {{date}}",
         "view_in_board": "Vous pouvez voir cette recette dans le tableau, en cliquant sur votre recette et en ouvrant l'onglet Recette.",
         "do_not_show_again": "Ne plus afficher ce message.",
         "close": "Fermer",
@@ -587,6 +587,7 @@
         "success": "Succès",
         "failed": "Échoué",
         "for": "pour",
+        "operator": "Opérateur",
         "lot": "Lot",
         "to_treat": "À traiter",
         "assigned_at": "Attribué au laboratoire à",
