--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -377,7 +377,7 @@
         "save": "Save",
         "form_errors": "Form Errors",
         "recipe_created": "Recipe Created",
-        "recipe_created_message": "Recipe successfully created for processing on {{date}}",
+        "recipe_created_message": "Recipe successfully created for processing",
         "view_in_board": "You can view this Recipe in the Board.",
         "do_not_show_again": "Do not show this message again.",
         "close": "Close",
