Enhance print functionality and layout adjustments in TkwDetails and LotLabReport components

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -245,9 +245,9 @@
         "lot": "Lot",
         "seeds_to_treat": "Seeds To Treat",
         "operator": "Operator",
-        "probe_1": "Repetition 1",
-        "probe_2": "Repetition 2",
-        "probe_3": "Repetition 3",
+        "probe_1": "Rep. 1",
+        "probe_2": "Rep. 2",
+        "probe_3": "Rep. 3",
         "average": "Av.",
         "assignment_creation_date": "Lab Assignment Creation Date",
         "raw_measurement_date": "Raw TKW Measurement Date",
