--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -245,9 +245,9 @@
         "lot": "Lot",
         "seeds_to_treat": "Graines à traiter",
         "operator": "Opérateur",
-        "probe_1": "Repetition 1",
-        "probe_2": "Repetition 2",
-        "probe_3": "Repetition 3",
+        "probe_1": "Rep. 1",
+        "probe_2": "Rep. 2",
+        "probe_3": "Rep. 3",
         "average": "Moyenne",
         "assignment_creation_date": "Date de création de l'affectation de laboratoire",
         "raw_measurement_date": "Date de mesure du TKW brut",
