--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -601,5 +601,12 @@
         "treatment_finished_at": "Treatment Finished At",
         "latest_tkw_measured_at": "Latest TKW Measured At",
         "completed_at": "Completed At"
+    },
+    "authentication": {
+        "register_failed": "Failed to register user",
+        "login_failed": "Login failed",
+        "no_company": "User has no company",
+        "session_timed_out": "Session timed out, please log in again.",
+        "logout_failed": "Logout failed"
     }
 }
