refactor: update TKW details layout and improve localization for measurement units

--- a/src/locales/enUS.json
+++ b/src/locales/enUS.json
@@ -11,7 +11,7 @@
     "units": {
         "g_ml": "g/ml",
         "kg": "kg",
-        "gr": "gr",
+        "gr": "g",
         "su": "s.u.",
         "ml": "ml",
         "l": "l",
@@ -206,7 +206,7 @@
     "treated": "Treated",
     "lot": "Lot",
     "seeds_to_treat": "Seeds To Treat",
-    "raw_average_tkw": "Raw Average TKW",
+    "raw_average_tkw": "Untreated Average TKW",
     "treated_average_tkw": "Treated Average TKW",
     "treatment_started": "Treatment Started",
     "treatment_finished": "Treatment Finished",
@@ -219,7 +219,7 @@
         "treated": "Treated",
         "lot": "Lot",
         "seeds_to_treat": "Seeds To Treat",
-        "raw_average_tkw": "Raw Average TKW",
+        "raw_average_tkw": "Untreated Average TKW",
         "treated_average_tkw": "Treated Average TKW",
         "tests_performed": "Tests Performed",
         "treatment_started": "Treatment Started",
@@ -241,20 +241,20 @@
     },
     "tkw_details_page": {
         "back": "Back",
-        "tkw_details": "TKW Details",
+        "tkw_details": "Lab Work Report",
         "lot": "Lot",
         "seeds_to_treat": "Seeds To Treat",
         "operator": "Operator",
         "probe_1": "Rep. 1",
         "probe_2": "Rep. 2",
         "probe_3": "Rep. 3",
-        "average": "Av.",
+        "average": "AVG",
         "assignment_creation_date": "Lab Assignment Creation Date",
-        "raw_measurement_date": "Raw TKW Measurement Date",
-        "creation_date": "Creation Date",
-        "measurement_date": "Measurement Date",
+        "raw_measurement_date": "Untreated Seeds TKW",
+        "creation_date": "Test order created:",
+        "measurement_date": "Test performed:",
         "completion_date": "Treatment Completion Date",
-        "treated_tkw_measurements": "Treated TKW Measurements",
+        "treated_tkw_measurements": "Treated TKW Measurements measured at:",
         "close": "Close"
     },
     "recipe_raw_tkw_details_input_modal": {
