--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -181,7 +181,7 @@
         "add_crop": "Ajouter une culture",
         "delete_crop": "Supprimer la culture",
         "delete_variety": "Supprimer la variété",
-        "confirm_delete": "Êtes-vous sûr de vouloir supprimer ce {{type}} ? Cette action ne peut pas être annulée.",
+        "confirm_delete": "Êtes-vous sûr de vouloir supprimer ce? Cette action ne peut pas être annulée.",
         "cancel": "Annuler"
     },
     "orders_overview": {
